[package]
authors = ["Maximilian Krüger <kruemaxi@gmail.com>"]
description = "convert scalars and vectors from hertz to mel scale"
documentation = "https://snd.github.io/mel/mel/index.html"
homepage = "https://github.com/snd/mel"
keywords = ["mel", "mfcc", "hertz"]
license = "MIT OR Apache-2.0"
name = "mel"
readme = "README.md"
repository = "https://github.com/snd/mel.git"
version = "0.3.0"
edition = "2018"

[dependencies]
apodize = { git = "https://github.com/hotg-ai/apodize", rev = "41baaee092a9b49e26442d946046a8c3ec3d9ccf" }
hertz = {  git = "https://github.com/hotg-ai/hertz", rev = "707d6d3c239663f04cc22f33391fbe54833189db", default-features = false }
num = { version = "0.4.0", default-features = false, features = ["libm"] }
num-traits = { version = "0.2.14", default-features = false }

[dev-dependencies]
approx = "0.4.0"
nalgebra = "0.26.1"

[features]
default = ["std"]
std = ["num/std"]
